# caliber

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: documentation.yml  tests.yml
benchmarks/: binary_classification.py
benchmarks/binary_classification/: binary_classification.py  ppi.py  vision_and_text.py
benchmarks/binary_classification/ood/: ood_two_moons.py
benchmarks/multiclass_classification/: multiclass_classification.py
benchmarks/multiclass_classification/cifar10/: prepare_data.py  run.py
benchmarks/multiclass_classification/ood/: ood_digits.py
benchmarks/ood/: ood_two_moons.py
benchmarks/ppi/: run.py
benchmarks/regression/: regression.py
caliber/: __init__.py
caliber/binary_classification/: base.py  base_brute_fit_mixin.py  base_smooth_fit_mixin.py  checks_mixin.py  pred_from_probs_mixin.py
caliber/binary_classification/binning/: base.py  iterative.py
caliber/binary_classification/data/: __init__.py  adult.py  blobs.py  breast_cancer.py  digits.py  heart_disease.py
caliber/binary_classification/group_conditional_unbiased/: base.py
caliber/binary_classification/iterative_fitting/: base.py
caliber/binary_classification/iterative_model/: base.py
caliber/binary_classification/linear_scaling/: base.py  brute_fit_mixin_linear_scaling.py  smooth_fit_mixin_linear_scaling.py
caliber/binary_classification/metrics/: __init__.py  asce.py  bias.py  ece.py  focal_loss.py  knee_distance.py  log_loss.py  precrec_error.py  rates.py
caliber/binary_classification/minimizing/: base.py  base_brute_fit_mixin.py  smooth_fit_mixin.py
caliber/multiclass_classification/: base.py  base_smooth_fit_mixin.py  checks_mixin.py  pred_from_probs_mixin.py
caliber/ood/: mahalanobis.py
caliber/regression/: base.py
caliber/regularizers/: base.py  l2.py
caliber/utils/: interval_type_error.py  joint_ecdf.py  quantile_checks.py
data/: __init__.py  adult.py  blobs.py  diabetes.py  digits.py  heart_disease.py  iris.py  regression.py  two_moons.py
docs/source/: conf.py  index.rst  installation.rst  landingpage.rst
models/cnn_cifar10/: cnn.py  train.py
tests/: test_benchmarks.py
tests/binary_classification/: test_methods_breast_cancer.py
tests/multiclass_classification/: test_methods_iris.py
tests/ood/: test_ood_two_moons.py
tests/regression/: test_heteroskedastic.py  test_methods_diabetes.py  test_minimizing.py
tests/utils/: test_joint_ecdf.py
(+127 files in other folders)
