[tool.poetry]
name = "caliber"
version = "0.1.19"
description = "Model-agnostic calibration and performance enhancement."
authors = ["Gianluca Detommaso <detommaso.gianluca@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^2.0.0"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
tabulate = "^0.9.0"
pandas = "^2.1.4"
pre-commit = "^3.6.0"
absolufy-imports = "^0.3.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
xgboost = "^2.0.3"
torch = {version = "^2.2.0", optional = true}
torchvision = {version = "^0.17.0", optional = true}
sphinx = {version = "^7.2.6", optional = true}
sphinx-autodoc-typehints = {version = "^2.0.0", optional = true}
sphinx-gallery = {version = "^0.15.0", optional = true}
furo = {version = "^2024.1.29", optional = true}

[tool.poetry.extras]
torch = ["torch", "torchvision"]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-gallery", "furo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
