[project]
name = "caliber"
version = "0.1.20"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "absolufy-imports>=0.3.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xgboost>=2.1.4",
]

[project.optional-dependencies]
torch = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-gallery>=0.19.0",
]

[tool.setuptools]
py-modules = []
